# hls-generator

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: toolchain-mingw.cmake
dev-scripts/linux/: download-ffmpeg-headers-linux.sh  download-ffmpeg-headers-windows.sh
dev-scripts/windows/: download-ffmpeg-headers-linux.bat  download-ffmpeg-headers-windows.bat
docs/: BUILD-GUIDE.md  DEVELOPMENT-JOURNEY.md  README.md  SPECIFICATIONS.md  TECHNICAL-REFERENCE.md
js-inject/: 01-cookie-consent-killer.js
src/: audio_pipeline.cpp  audio_pipeline.h  browser_backend.h  browser_backend_factory.cpp  browser_input.cpp  browser_input.h  cef_backend.cpp  cef_backend.h  cef_function_redirects.h  cef_function_wrappers.cpp  cef_loader.cpp  cef_loader.h  cef_stubs.cpp  config.h  dynamic_library.h  ffmpeg_context.cpp  ffmpeg_context.h  ffmpeg_deleters.cpp  ffmpeg_deleters.h  ffmpeg_input.cpp  ffmpeg_input.h  ffmpeg_loader.cpp  ffmpeg_loader.h  ffmpeg_wrapper.cpp  ffmpeg_wrapper.h  hls_generator.cpp  hls_generator.h  logger.cpp  logger.h  main.cpp  muxer_manager.cpp  muxer_manager.h  obs_detector.cpp  obs_detector.h  stream_input.cpp  stream_input.h  video_pipeline.cpp  video_pipeline.h
